--- a/client/src/components/Radio.css
+++ b/client/src/components/Radio.css
@@ -1,37 +1,34 @@
 audio::-webkit-media-controls-panel {
-    background-color: rgb(223, 246, 247);
-  }
-
-  audio::-webkit-media-controls-current-time-display {
-    display: none;
-  }
-
-  audio::-webkit-media-controls-time-remaining-display {
-      display: none;
-  }
-
-  audio::-webkit-media-controls-timeline-container { 
-      display: none;
-  }
-
-  audio::-webkit-media-controls-timeline { 
-    display: none;
+  background-color: rgb(223, 246, 247);
 }
 
-audio::-webkit-media-controls-play-button { 
-    margin-right: 60px;
+audio::-webkit-media-controls-current-time-display {
+  display: none;
+}
 
-    
+audio::-webkit-media-controls-time-remaining-display {
+  display: none;
+}
 
- }
-  audio::-webkit-media-controls-play-button:hover { 
-     background-color: pink;
-     border-radius: 50%;
-     
+audio::-webkit-media-controls-timeline-container {
+  display: none;
+}
 
-  }
+/* audio::-webkit-media-controls-timeline { 
+    display: none;
+} */
 
-  audio::-webkit-media-controls-volume-slider-container {
-      background-color: red;
-  }
+audio::-webkit-media-controls-play-button {
+  /* margin-right: 60px; */
+  border-radius: 50%;
+}
 
+audio::-webkit-media-controls-play-button:hover {
+  transition: background-color 0.5s ease-in;
+  background-color: pink;
+  border-radius: 50%;
+}
+
+audio::-webkit-media-controls-volume-slider-container {
+  background-color: red;
+}
