--- a/client/src/components/Radio.css
+++ b/client/src/components/Radio.css
@@ -1,5 +1,5 @@
 audio::-webkit-media-controls-panel {
-  background-color: rgb(223, 246, 247);
+  background-color: white;
 }
 
 audio::-webkit-media-controls-current-time-display {
