--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -5,7 +5,7 @@ span {
 .dropbtn {
   /* padding-bottom: 5px; */
   font-family: inherit;
-  font-size: inherit;
+  font-size: 19px;
   border: none;
   cursor: pointer;
   background-color: inherit;
