--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -3,7 +3,7 @@ span {
 }
 
 .dropbtn {
-  /* padding-bottom: 5px; */
+  padding-bottom: 7px;
   font-family: inherit;
   font-size: 19px;
   border: none;
