notes and underline effect and error removed

--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -2,6 +2,22 @@ span {
   margin-bottom: -5%;
 }
 
+/* .blink {
+  animation: blink-animation 2s steps(5, start) infinite;
+  -webkit-animation: blink-animation 2s steps(5, start) infinite;
+}
+
+@keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
+@-webkit-keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+} */
+
 .dropbtn {
   padding-bottom: 7px;
   font-family: inherit;
@@ -56,3 +72,4 @@ span {
 .dropdown:hover .dropdown-content {
   display: block;
 }
+
