--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -2,6 +2,111 @@ span {
   margin-bottom: -5%;
 }
 
+.link-active {
+  color: #f8d6fe;
+
+  position: relative;
+  margin: 30px;
+  text-decoration: none;
+  font-size: 18px;
+  font-family: inherit;
+  border-bottom: 2px solid #f8d6fe;
+}
+
+.link {
+  color: inherit;
+
+  position: relative;
+  margin: 30px;
+  text-decoration: none;
+  font-size: 18px;
+  color: inherit;
+  font-family: inherit;
+  padding-bottom: 2px;
+}
+
+.link:hover {
+  color: #f8d6fe;
+}
+
+.link:before {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  content: "";
+  background-color: #f8d6fe;
+  width: 0%;
+  height: 2px;
+  transition: width 1s, left 1s;
+}
+
+:hover:before {
+  width: 100%;
+  left: 0%;
+}
+
+@media (max-width: 650px) {
+
+  .link {
+    /* padding: 7px; */
+    margin: 0;
+    width: fit-content;
+    font-size: 1.2em;
+    margin-right: 25px;
+
+  }
+
+  .link-active {
+    /* padding: 7px; */
+    margin: 0;
+    width: fit-content;
+    font-size: 1.2em;
+    margin-right: 25px;
+
+  }
+  
+  
+}
+
+@media (max-width: 380px) {
+
+  .link {
+    font-size: 1.1em;
+    /* display: inline-block; */
+}
+
+
+.link-active {
+  font-size: 1.1em;
+
+}
+
+
+
+}
+
+/* 
+@media (max-width: 650px) {
+
+.link {
+  display: inline-block;
+
+  padding: 7px;
+  margin: 0;
+  width: fit-content;
+  font-size: 1.2em;
+  margin-right: 25px;
+}
+}
+
+@media (max-width: 380px) {
+
+  .link { font-size: 1.1em;
+    display: inline-block;
+  }
+ 
+} */
+
 /* .blink {
   animation: blink-animation 2s steps(5, start) infinite;
   -webkit-animation: blink-animation 2s steps(5, start) infinite;
@@ -18,6 +123,11 @@ span {
   }
 } */
 
+
+
+/* Old CSS for dropdown menu  */
+
+/* 
 .dropbtn {
   padding-bottom: 7px;
   font-family: inherit;
@@ -47,7 +157,7 @@ span {
 .dropdown {
   position: relative;
   display: inline-block;
-  /* margin: 14px; */
+
 }
 
 .dropdown-content {
@@ -71,5 +181,4 @@ span {
 
 .dropdown:hover .dropdown-content {
   display: block;
-}
-
+} */
