--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -127,7 +127,7 @@ span {
   }
 } */
 
-.blink {
+/* .blink {
   animation: blink 2s linear infinite alternate-reverse;
 }
 
@@ -141,7 +141,7 @@ span {
   100% {
     opacity: 1;
   }
-}
+} */
 
 
 
