--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -1,6 +1,6 @@
 @media (min-width: 650px) {
   .logo:hover .blink {
-    animation: logoAnimate 1.7s both;
+    animation: logoAnimate 2s infinite;
   }
 
   @keyframes logoAnimate {
