--- a/client/src/components/AudioFooter.css
+++ b/client/src/components/AudioFooter.css
@@ -3,7 +3,7 @@
   position: fixed;
   bottom: 0;
   left: 0;
-  width: 100%;
+  width: 400px;
   height: 50px;
   background-color: black;
   color: #fff;
@@ -12,12 +12,13 @@
   align-items: center;
   justify-content: flex-start;
   gap: 20px;
-  border-top: 1px solid white;
+  border-top: 2px solid white;
+  border-right: 2px solid white;
 }
 
 /* Style for the play/pause button */
 .footer button {
-  padding: 8px 12px;
+  padding: 8px 5px;
   background-color: inherit;
   color: white;
   border: none;
@@ -26,12 +27,11 @@
 }
 
 .volume-button {
-  font-size: 1.5em;
+  font-size: 1.6em;
 }
 
 .playpause-button {
   font-size: 2.2em;
-  color: black;
 }
 
 .spin-icon {
@@ -102,8 +102,23 @@
   z-index: 1;
 }
 
-@media (max-width: 760px) {
+@media (max-width: 769px) {
   .marquee-wrapper {
     width: 200px; /* Adjust to the width you want */
+  }
+  .footer {
+    height: 40px;
+    width: 100%;
+  }
+}
+
+@media (max-width: 380px) {
+  .marquee-wrapper {
+    width: 150px;
+  }
+
+  .footer {
+    height: 40px;
+    width: 100%;
   }
 }
