--- a/client/src/components/AudioFooter.css
+++ b/client/src/components/AudioFooter.css
@@ -15,6 +15,8 @@
   gap: 20px;
   border-top: 2px solid white;
   border-right: 2px solid white;
+  /* overflow: hidden;
+  z-index: 1000; */
 }
 
 /* Style for the play/pause button */
@@ -40,6 +42,7 @@
 .spin-icon {
   animation: spin 1s linear infinite;
   font-size: 0.7em;
+  padding: 10px 10px;
 }
 
 @keyframes spin {
@@ -107,12 +110,20 @@
 
 @media (max-width: 769px) {
   .marquee-wrapper {
-    width: 200px; /* Adjust to the width you want */
+    width: 260px; /* Adjust to the width you want */
   }
   .footer {
-    height: 40px;
+    height: 6vh;
     width: 100%;
+    padding: 15px 5px 10px 10px;
+    border-top: 1px solid white;
+    border-right: none;
+    margin: 0;
   }
+  /* 
+  .playpause-button {
+  margin-top: 3px;
+  } */
 }
 
 @media (max-width: 380px) {
