--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -61,7 +61,7 @@ span {
   }
 }
 /* Tablet and small desktop styles */
-@media (max-width: 768px) {
+@media (max-width: 768px) and (orientation: portrait) {
   .link,
   .link-active {
     margin: 0;
@@ -72,7 +72,7 @@ span {
 }
 
 /* Mobile styles */
-@media (max-width: 650px) {
+@media (max-width: 650px) and (orientation: portrait) {
   .link,
   .link-active {
     font-size: 1.3em;
@@ -80,7 +80,7 @@ span {
 }
 
 /* Smaller mobile styles */
-@media (max-width: 380px) {
+@media (max-width: 380px) and (orientation: portrait) {
   .link,
   .link-active {
     font-size: 19px;
