--- a/client/src/components/AudioFooter.css
+++ b/client/src/components/AudioFooter.css
@@ -84,20 +84,12 @@
 
 .marquee-wrapper::before {
   left: 0;
-  background: linear-gradient(
-    to right,
-    black,
-    rgba(255, 255, 255, 0)
-  ); /* Change color as needed */
+  background: linear-gradient(to right, black, transparent); /* Change color as needed */
 }
 
 .marquee-wrapper::after {
   right: 0;
-  background: linear-gradient(
-    to left,
-    black,
-    rgba(255, 255, 255, 0)
-  ); /* Change color as needed */
+  background: linear-gradient(to left, black, transparent); /* Change color as needed */
 }
 
 .marquee {
