--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -20,7 +20,7 @@
   position: relative;
   margin: 30px;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 23px;
   font-family: inherit;
   color: inherit;
   padding-bottom: 2px;
@@ -47,7 +47,7 @@
   }
 }
 
-@media only screen and (min-device-width: 769px) and (max-device-width: 1366px) {
+/* @media only screen and (min-device-width: 769px) and (max-device-width: 1366px) {
   .link,
   .link-active {
     margin: 0;
@@ -55,7 +55,7 @@
     font-size: 23px;
     margin-right: 25px;
   }
-}
+} */
 
 /* Tablet and small desktop styles */
 @media (min-width: 651px) and (max-width: 768px) {
