--- a/client/src/components/AudioFooter.css
+++ b/client/src/components/AudioFooter.css
@@ -21,14 +21,14 @@
   position: relative;
   display: flex;
   align-items: center;
-  height: 60px; /* Adjust to match the height of the footer */
-  z-index: 10;
+  height: 70px; /* Adjust to match the height of the footer */
 }
 
 .slider-container {
-  position: absolute;
-  bottom: 100%; /* Aligns the bottom of the slider with the top of the volume button */
-  right: 0; /* Aligns the slider to the right side of the volume button */
+  position: fixed;
+  bottom: 55px; /* Aligns the bottom of the slider with the top of the volume button */
+  left: 341px;
+  right: 0;
   height: 110px;
   width: 40px; /* Width of the container */
   border: 2px solid white; /* Border for the container */
@@ -36,12 +36,15 @@
   padding: 20px 10px 10px 10px; /* Padding inside the container */
   box-sizing: border-box;
   display: none;
-  z-index: -1;
+  z-index: 10;
 
-  opacity: 0;
   transform: translateY(100%);
 
   transition: transform 0.4s ease, opacity 0.7s ease; /* Smooth transition for transform */
+}
+
+.slider-container.show {
+  transform: translateY(0);
 }
 
 @media screen and (min-width: 768px) {
@@ -83,10 +86,11 @@
   cursor: pointer;
 }
 
-.volume-container:hover .slider-container {
+/* .volume-container:hover + .slider-container {
   opacity: 1;
   transform: translateY(0);
-}
+  pointer-events: auto;
+} */
 
 .volume-container,
 .volume-slider,
