--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -4,6 +4,7 @@
   display: flex;
   align-items: center;
   flex-shrink: 0;
+  padding-top: 10px;
 }
 
 @media (max-width: 650px) {
@@ -14,11 +15,17 @@
   }
 }
 
+@media (max-width: 881px) {
+  .links {
+    padding-top: 0;
+  }
+}
+
 /* Base Styles: These styles apply for all devices initially */
 .link,
 .link-active {
   position: relative;
-  margin: 30px;
+
   text-decoration: none;
   font-size: 23px;
   font-family: inherit;
@@ -46,8 +53,6 @@
     margin-right: 25px;
   }
 }
-
-
 
 /* Tablet and small desktop styles */
 @media (min-width: 651px) and (max-width: 768px) {
